--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.35",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "eslint": "^8.16.0",
     "nodemon": "^2.0.16",
     "typescript": "^4.7.2"
   }
