--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   "description": "backend usermanagement",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dheniarley Cruz",
@@ -18,6 +20,7 @@
     "@typescript-eslint/parser": "^5.26.0",
     "eslint": "^8.16.0",
     "nodemon": "^2.0.16",
+    "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
   }
 }
