--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "Dheniarley Cruz",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.14.0",
     "express": "^4.18.1"
   },
   "devDependencies": {
@@ -20,6 +21,7 @@
     "@typescript-eslint/parser": "^5.26.0",
     "eslint": "^8.16.0",
     "nodemon": "^2.0.16",
+    "prisma": "^3.14.0",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
   }
