--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.14.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "zod": "^3.17.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
