--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "sinon": "^14.0.0",
     "ts-jest": "^28.0.3",
     "ts-node": "^10.8.0",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "zod": "^3.17.3"
   },
   "devDependencies": {
     "@types/mocha": "^9.1.1"
