--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "sinon": "^14.0.0",
+    "swagger-ui-express": "^4.4.0",
     "ts-jest": "^28.0.3",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2",
     "zod": "^3.17.3"
   },
   "devDependencies": {
-    "@types/mocha": "^9.1.1"
+    "@types/mocha": "^9.1.1",
+    "@types/swagger-ui-express": "^4.1.3"
   }
 }
