--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "backend usermanagement",
   "main": "index.js",
   "scripts": {
+    "prisma:generate": "node ./node_modules/.bin/prisma generate --schema=src/database/prisma/schema.prisma && ts-node src/index.ts",
     "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
     "lint": "eslint --fix --ext .ts,.js",
@@ -15,19 +16,22 @@
     "@prisma/client": "^3.14.0",
     "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "prisma": "^3.14.0",
+    "swagger-ui-express": "^4.4.0",
     "zod": "^3.17.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.35",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^8.16.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.16",
-    "prisma": "^3.14.0",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
   }
