--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ build/Release
 # Dependency directories
 node_modules/
 backend/node_modules
-front/node_modules
+frontend/node_modules
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
