--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@prisma/client": "^3.14.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "prisma": "^3.14.0",
