--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ bower_components
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
+frontend/build
+backend/build
+
 # Dependency directories
 node_modules/
 backend/node_modules
