--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test-jest": "jest",
     "test-jest:coverage": "jest --config='./jest.unit.config.js' --forceExit --detectOpenHandles",
     "test": "mocha -r ts-node/register __tests__/unit/test-unit-chai/**/*.test.ts -exit -t 60000",
-    "test-coverage": "nyc npm run test"
+    "test-coverage": "nyc npm run test",
+    "compose:up": "docker-compose up -d --build",
+    "compose:down": "docker-compose down --remove-orphans"
   },
   "author": "Dheniarley Cryz",
   "license": "ISC",
